// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Closed 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className="small undefined function small() { [native code] }"
      disabled={undefined}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      The Dogs
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <div
    className={undefined}
  >
    <button
      className="small undefined function small() { [native code] }"
      disabled={true}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      Give me something
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Icon only (disabled) 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <div
    className={undefined}
  >
    <button
      className="small undefined function small() { [native code] }"
      disabled={true}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      <div
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-edit"
        />
      </div>
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Icon only (large) 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className="large undefined"
      disabled={undefined}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      <div
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-edit"
        />
      </div>
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Icon only 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className="small undefined function small() { [native code] }"
      disabled={undefined}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      <div
        style={
          Object {
            "marginRight": 0,
          }
        }
      >
        <i
          className="wg-edit"
        />
      </div>
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Large button 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className="large undefined"
      disabled={undefined}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      Give me something
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Neutral 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className="small undefined function small() { [native code] }"
      disabled={undefined}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      The Ocean
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Neutral Off 1`] = `
<div
  style={
    Object {
      "backgroundColor": "gray",
      "display": "inline-block",
      "padding": "10px",
    }
  }
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <button
        className="small undefined function small() { [native code] }"
        disabled={undefined}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        tabIndex={undefined}
      >
        Neutral Off Button
      </button>
      <div
        className={undefined}
      >
        <div
          className="undefined"
        >
          This action is disabled.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className="small undefined function small() { [native code] }"
      disabled={undefined}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      Give me something
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Primary with Icon 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className="small undefined function small() { [native code] }"
      disabled={undefined}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      <div
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <i
          className="wg-meat"
        />
      </div>
      Give me something
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Request 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className="small undefined function small() { [native code] }"
      disabled={undefined}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      The Dogs
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Secondary 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className="small undefined function small() { [native code] }"
      disabled={undefined}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      tabIndex={undefined}
    >
      The Ocean
    </button>
    <div
      className={undefined}
    >
      <div
        className="undefined"
      >
        This action is disabled.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip isVisible false 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "width": "65px",
    }
  }
>
  <div
    className={undefined}
  >
    <div
      className="undefined"
    >
      Hey yo
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip isVisible true 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "width": "65px",
    }
  }
>
  <div
    className={undefined}
  >
    <div
      className=""
    >
      Hey yo
    </div>
  </div>
</div>
`;
